--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.9.2",
+    "kafkajs": "^2.2.4",
     "typescript": "^5.1.5",
     "winston": "^3.9.0"
   },
