--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express": "^4.18.2",
     "joi": "^17.9.2",
     "kafkajs": "^2.2.4",
+    "pg-promise": "^11.5.0",
     "typescript": "^5.1.5",
     "winston": "^3.9.0"
   },
