--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
+
 {
+  "scripts": {
+    "dev": "ts-node src/app.ts",
+    "start": "ts-node dist/app.js",
+    "build": "tsc -p ."
+  },
   "dependencies": {
     "@types/express": "^4.17.17",
     "dotenv": "^16.3.1",
